--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,13 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "express-validator": "^6.14.3",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemailer": "^6.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
