--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "nodemailer": "^6.9.0"
+    "nodemailer": "^6.9.0",
+    "nodemailer-markdown": "^1.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
