--- a/client/app.config.json
+++ b/client/app.config.json
@@ -1,10 +1,10 @@
 {
     apps : [
       {
-        name      : "healthcare-site",
+        name      : "healthcare-client",
         script    : "npx",
         interpreter: "none",
-        args: "serve -s build -p 3000"
+        args: "serve -s build -p 80"
       }
     ]
   }
